general updates for 2025

--- a/graphics/omnibar.html
+++ b/graphics/omnibar.html
@@ -33,7 +33,7 @@
       }
 
       .zd-omnibar__logo {
-        width: 332px;
+        width: 382px;
         margin-left: 8px;
       }
 
@@ -110,7 +110,7 @@
       }
 
       .zd-omnibar__ticker {
-        width: 1190px; /* zd-omnibar__ticker__active--scroll must match */
+        width: 1140px; /* zd-omnibar__ticker__active--scroll must match */
         overflow: hidden;
       }
 
@@ -177,8 +177,8 @@
       .zd-omnibar__ticker__active--scroll {
         animation: scroll 3s linear;
         transform: translateX(
-          calc(1190px - 100%)
-        ); /* 1190px = width of ticker */
+          calc(1140px - 100%)
+        ); /* 1140px = width of ticker */
       }
 
       .zd-omnibar__slideover {
@@ -198,9 +198,9 @@
         width: 100px; /* Feather: 34 */
         height: 100%;
         background: right / auto 66px no-repeat
-          url("../shared/images/ZDM24_Logo_WhiteStroke.png");
+          url("../shared/images/ZDM25_BarLogo72.png");
         background-position-x: 0px;
-        transform: scale(1.6) translate(10px, 4px);
+        /*transform: scale(1.6) translate(10px, 4px);*/
       }
 
       .zd-omnibar__slideover-body {
@@ -306,8 +306,8 @@
 
         to {
           transform: translateX(
-            calc(1190px - 100%)
-          ); /* 1190px = width of ticker */
+            calc(1140px - 100%)
+          ); /* 1140px = width of ticker */
         }
       }
     </style>
