--- a/graphics/upnext.html
+++ b/graphics/upnext.html
@@ -29,7 +29,7 @@ window.onload = function() {
     const app = new Vue({
         el: "#app",
         template: `<div style="display: flex; flex-direction: column; align-items: center; width: 960px;">
-            <img style="display: block; height: 300px; width: 300px; margin: 30px;" src="../shared/images/ZDM24_Logo.png" />
+            <img style="display: block; height: 300px; margin: 30px;" src="../shared/images/ZDM25_FullLogo.png" />
             <div style="height: 240px; font-size: 2em; text-align: center;"><span>Coming up: {{ nextRun }}</span></div>
             <zd-social style="width: 920px;"></zd-social>
         </div>`,
