layouts and updates for 2025

--- a/dashboard/runs/runs.html
+++ b/dashboard/runs/runs.html
@@ -14,7 +14,7 @@
     <script defer src="../../shared/scripts/vuecg.js"></script>
     <script defer src="../../shared/components/timer.js"></script>
     <script defer src="../../shared/components/levels.js"></script>
-    <script defer src="../../shared/components/maiamais.js"></script>
+    <script defer src="../../shared/components/counter-controls.js"></script>
     <script defer src="../../shared/components/masks.js"></script>
     <script defer src="./readonly-field.js"></script>
     <script defer src="./finish-button.js"></script>
@@ -23,7 +23,8 @@
     <script defer src="./team-member.js"></script>
     <script defer src="./race-card.js"></script>
     <script defer src="./elimination-card.js"></script>
-    <script defer src="./rumble-card.js"></script>
+    <script defer src="./rumble-card-oot.js"></script>
+    <script defer src="./rumble-card-tp.js"></script>
     <script defer src="./bingo-card.js"></script>
     <script defer src="./levels-card.js"></script>
     <script defer src="./team-card.js"></script>
