--- a/graphics/1x2x4x3_large.html
+++ b/graphics/1x2x4x3_large.html
@@ -15,22 +15,28 @@
     <script defer src="../shared/components/social.js"></script>
     <script defer src="./layout.js"></script>
     <style>
+        #corey {
+            height: 500px;
+            margin-left: 10px;
+        }
+
         .zd-timer {
-            top: 530px;
-            left: 110px;
+            top: 720px;
+            right: 0px;
         }
 
         .zd-social {
-            bottom: 80px;
-            width: 420px;
-            height: 420px;
+            left: 0px;
+            width: 320px;
+            height: 480px;
         }
     </style>
 </head>
 <body> 
     <div id="app">
-        <zd-feed kind="3x2" left="420" top="0" width="1500" height="1000" :run-name="runName"></zd-feed>
-        <zd-feed kind="cam" left="0" top="0" width="420" height="420" :run-name="runName" :player-num="0" :total-num-displayed="1"></zd-feed>
+        <zd-feed kind="4x3" left="320" top="0" width="640" height="480" :run-name="runName"></zd-feed>
+        <zd-feed kind="4x3" left="960" top="0" width="960" height="720" :run-name="runName" player-num="0" nameplate-pos="bottomleft"></zd-feed>
+        <zd-feed kind="cam" left="0" top="480" width="960" height="520" :run-name="runName"></zd-feed>
         <zd-timer></zd-timer>
         <zd-social></zd-social>
     </div>
