--- a/graphics/3x4x3.html
+++ b/graphics/3x4x3.html
@@ -16,22 +16,25 @@
     <script defer src="./layout.js"></script>
     <style>
         .zd-timer {
-            top: 530px;
-            left: 110px;
+            top: 480px;
+            left: 1180px;
         }
 
         .zd-social {
-            bottom: 80px;
-            width: 420px;
-            height: 420px;
+            top: 540px;
+            left: 0px;
+            width: 640px;
+            height: 460px;
         }
     </style>
 </head>
 <body> 
     <div id="app">
-        <zd-feed kind="3x2" left="420" top="0" width="1500" height="1000" :run-name="runName"></zd-feed>
-        <zd-feed kind="cam" left="0" top="0" width="420" height="420" :run-name="runName" :player-num="0" :total-num-displayed="1"></zd-feed>
-        <zd-timer></zd-timer>
+        <zd-feed kind="4x3" left="0" top="0" width="640" height="480" :run-name="runName" player-num="0" nameplate-pos="bottomleft"></zd-feed>
+        <zd-feed kind="4x3" left="640" top="0" width="640" height="480" :run-name="runName" player-num="1" nameplate-pos="bottomleft"></zd-feed>
+        <zd-feed kind="4x3" left="1280" top="0" width="640" height="480" :run-name="runName" player-num="2" nameplate-pos="bottomright"></zd-feed>
+        <zd-feed kind="cam" left="640" top="540" width="1280" height="460" :run-name="runName"></zd-feed>
+        <zd-timer v-if="showTimer"></zd-timer>
         <zd-social></zd-social>
     </div>
 </body>
